# StackSage

./: .env.example  .gitignore  Documentation.md  README.md  dev.bat  dev.sh  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
StackSage/: firstPrompt.txt
backend/: Dockerfile  README.md  celery_worker.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  auth.py  config.py  database.py  main.py
backend/app/data/: hardware_specs.json
backend/app/models/: __init__.py  user_projects.py
backend/app/routers/: health.py  users.py
backend/app/schemas/: health.py
backend/app/services/: init_db.py  qdrant_service.py
backend/tests/: test_health.py
frontend/: .gitignore  package-lock.json  package.json  ts_errors.txt
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/sign-in/[[...sign-in]]/: page.tsx
frontend/src/app/sign-up/[[...sign-up]]/: page.tsx
frontend/src/components/: Background.tsx  Navbar.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx
frontend/src/lib/: auth.ts
